# gphoto-suite

./: .gitignore  .gitmodules  Makefile.am  NEWS  README.gphoto-suite  README.md  configure.ac
tests/: Makefile-files
tools/: Makefile-files  check-includes  git-status  revert-po-files  tarball-pathlengths.py
